# libSDP-old

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  NOTICE  README.md  ROADMAP  appveyor.yml
Docs/: SDP_Spec.docx
docs/: SDP_Spec.txt
include/: Endianness.hpp  HexBinTool.hpp  RawFileIO.hpp  SDP.hpp  SDPAlgorithmBase.hpp  SDPChainBlock.hpp  SDPChainBlockBase.hpp  SDPCompressionStreamBuf.hpp  SDPCryptStreamBuf.hpp  SDPError.hpp  SDPParseException.hpp  SDPParser.hpp  SDPSourceSinkBase.hpp  SDPSpecBase.hpp  SDPStack.hpp  SDPStreamBuf.hpp  SDPVer.hpp  typedefs.hpp
include/AlgorithmBase/: SDPCompressionAlgorithmBase.hpp  SDPEncryptionAlgorithmBase.hpp
include/Algorithms/: SDPChainBlockBase.hpp
include/DefaultAlgorithms/: SDPDEFLATECompressionAlgorithm.hpp  SDPXSalsa20EncryptionAlgorithm.hpp  SDPlz4CompressionAlgorithm.hpp
include/SourceSink/: SDPFileSourceSink.hpp  SDPSourceSinkBase.hpp  SDPVectorSourceSink.hpp
include/Specs/: SDPSpecBase.hpp  SDPSpecRev_1_0.hpp
include/StreamBufs/: SDPCompressionStreamBuf.hpp  SDPCryptStreamBuf.hpp  SDPStreamBuf.hpp  SDPStreamBufBase.hpp
include/Utils/: DevMacros.hpp  Endianness.hpp  HexBinTool.hpp  RawFileIO.hpp  SHA256Hash.hpp  Typedefs.hpp
include/Utils/utf8/: checked.h  core.h  unchecked.h
src/: Endianness.cpp  HexBinTool.cpp  RawFileIO.cpp  RawFileIO.hpp  SDP.cpp  SDP.hpp  SDPAlgorithmBase.cpp  SDPChainBlock.cpp  SDPChainBlockBase.cpp  SDPCompressionStreamBuf.cpp  SDPCryptStreamBuf.cpp  SDPParser.cpp  SDPSourceSinkBase.cpp  SDPSpecBase.cpp  SDPStack.cpp  SDPStreamBuf.cpp  SDPVer.hpp
src/AlgorithmBase/: SDPCompressionAlgorithmBase.cpp  SDPEncryptionAlgorithmBase.cpp
src/Algorithms/: SDPChainBlockBase.cpp
src/DefaultAlgorithms/: SDPDEFLATECompressionAlgorithm.cpp  SDPXSalsa20EncryptionAlgorithm.cpp  SDPlz4CompressionAlgorithm.cpp
src/SourceSink/: SDPFileSourceSink.cpp  SDPVectorSourceSink.cpp
src/Specs/: SDPSpecRev_1_0.cpp
src/StreamBufs/: SDPCompressionStreamBuf.cpp  SDPCompressionStreamBuf.hpp  SDPCryptStreamBuf.cpp  SDPCryptStreamBuf.hpp  SDPStreamBuf.cpp  SDPStreamBuf.hpp  SDPStreamBufBase.cpp
src/StreamBufs/AlgorithmBase/: SDPCompressionAlgorithmBase.cpp
src/StreamBufs/DefaultAlgorithms/: SDPAES256GCMAlgorithm.cpp  SDPAES256GCMAlgorithm.hpp  SDPZlibCompressionAlgorithm.cpp  SDPZlibCompressionAlgorithm.hpp
src/Utils/: Endianness.cpp  HexBinTool.cpp  RawFileIO.cpp  SHA256Hash.cpp
test/: CMakeLists.txt  main.cpp
test/common/: common.cpp  common.hpp
test/common/data/: data64k  randomData64k
test/compressionTest/: main.cpp
test/compressionTests/DEFLATECompressionTest/: CMakeLists.txt  main.cpp
test/compressionTests/lz4CompressionTest/: CMakeLists.txt  main.cpp
test/encryptionTest/: main.cpp
test/encryptionTests/XSalsa20EncryptionTest/: CMakeLists.txt  main.cpp
tools/: progress.txt  template.hpp
