
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../include/AlgorithmBase)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../../include/DefaultAlgorithms)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../common)

SET(COMMON_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/../../common/common.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/../../common/common.cpp
)

ADD_EXECUTABLE(XSalsa20EncryptionTest
    ${COMMON_FILES}
    main.cpp
)
TARGET_LINK_LIBRARIES(XSalsa20EncryptionTest libSDP)
SET_TARGET_PROPERTIES(XSalsa20EncryptionTest
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
)
SET(additionalCleanFiles
    ${CMAKE_CURRENT_SOURCE_DIR}/randomData64k_ENCRYPTED
    ${CMAKE_CURRENT_SOURCE_DIR}/randomData64k_DECRYPTED
)
SET_DIRECTORY_PROPERTIES(PROPERTIES
ADDITIONAL_MAKE_CLEAN_FILES "${additionalCleanFiles}")